fix collapsable text

--- a/components/atoms/RichText/RichText.module.css
+++ b/components/atoms/RichText/RichText.module.css
@@ -18,3 +18,8 @@
 .rich-text a {
   text-decoration: underline;
 }
+
+.rich-text iframe {
+  width: 100%;
+  height: auto;
+}
